fix z-index

--- a/Assessments.Frontend.Web/wwwroot/css/filter.css
+++ b/Assessments.Frontend.Web/wwwroot/css/filter.css
@@ -170,8 +170,7 @@ button.close_filters {
     margin-left: -15px;
     width: 100vw;
     height: 100vh;
-    z-index: 10;
-
+    z-index: 12;
 }
 
 /* FILTER */
